--- a/app/src/main/res/layout/activity_show_images.xml
+++ b/app/src/main/res/layout/activity_show_images.xml
@@ -19,6 +19,7 @@
         android:id="@+id/show_images_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="@dimen/_10sdp" />
 
 </LinearLayout>
