--- a/app/src/main/res/layout/layout_image_item.xml
+++ b/app/src/main/res/layout/layout_image_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/_10sdp">
 
@@ -11,11 +12,12 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/_15ssp" />
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
         android:layout_gravity="start"
-        android:layout_marginTop="@dimen/_10sdp" />
+        android:layout_marginTop="@dimen/_10sdp"
+        android:scaleType="fitXY" />
 
 </LinearLayout>
